# shared/controller-api/src/main/java/io/pravega/shared/controller/event/kvtable/CreateTableEvent.java
@@ -73,6 +73,7 @@ public class CreateTableEvent implements ControllerEvent {
         @Override
         protected void declareVersions() {
             version(0).revision(0, this::write00, this::read00);
+            version(0).revision(1, this::write01, this::read01);
         }
 
         private void write00(CreateTableEvent e, RevisionDataOutput target) throws IOException {
@@ -84,7 +85,6 @@ public class CreateTableEvent implements ControllerEvent {
             target.writeUUID(e.tableId);
             target.writeInt(e.primaryKeyLength);
             target.writeInt(e.secondaryKeyLength);
-            target.writeLong(e.rolloverSizeBytes);
         }
 
         private void read00(RevisionDataInput source, CreateTableEventBuilder eb) throws IOException {
@@ -96,6 +96,13 @@ public class CreateTableEvent implements ControllerEvent {
             eb.tableId(source.readUUID());
             eb.primaryKeyLength(source.readInt());
             eb.secondaryKeyLength(source.readInt());
+        }
+
+        private void write01(CreateTableEvent e, RevisionDataOutput target) throws IOException {
+            target.writeLong(e.rolloverSizeBytes);
+        }
+
+        private void read01(RevisionDataInput source, CreateTableEventBuilder eb) throws IOException {
             eb.rolloverSizeBytes(source.readLong());
         }
     }
